plugins {
    id 'java'
}


compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
}


compileTestJava {
//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
}

test {
//    jvmArgs += ["--add-modules", "java.xml.bind"]
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation 'javax.xml.bind:jaxb-api:2.3.0'
    implementation 'com.sun.xml.bind:jaxb-core:2.3.0'
    implementation 'com.sun.xml.bind:jaxb-impl:2.3.0'
    implementation 'javax.activation:activation:1.1.1'
}
